--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-router-dom": "^5.3.2",
     "redux-devtools": "^3.7.0"
   }
