--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.2",
-    "@types/react-router-dom": "^5.3.2",
-    "redux-devtools": "^3.7.0"
+    "@types/react-router-dom": "^5.3.2"
   }
 }
