--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.3.2",
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
