--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
