--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,11 +1,11 @@
 # build environment
-FROM node:13 as build
+FROM node:16.13.2 as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm ci --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+# RUN npm install react-scripts@3.4.1 -g --silent
 COPY . ./
 RUN npm run build
 
