--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - '.:/app'
-      - '/app/node_modules'
+      # - '/app/node_modules'
     ports:
       - 3001:3000
     environment:
